@@ -2,6 +2,7 @@
 
 	* Fixed bug #17349: htmlArea RTE: JS error when using "Edit element"
 	* Updated htmlArea RTE version to 2.2.0
+	* Fixed bug #17438: htmlArea RTE: non-xhtml markup in image dialogue
 
 2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>
 
