@@ -3,6 +3,7 @@
 	* Fixed bug #17373: Standalone images in RTE-enabled field not rendered in frontend
 	* Fixed bug #17349: htmlArea RTE: JS error when using "Edit element"
 	* Updated htmlArea RTE version to 2.2.0
+	* Fixed bug #17438: htmlArea RTE: non-xhtml markup in image dialogue
 
 2011-02-01  Steffen Kamper  <steffen@typo3.org>
 
